2005-01-22  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/system.h (xnlock_put_irqrestore): Remove
	useless cpu_relax().

2005-01-20  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/atomic.h: Fix PPC405 erratum definition
	for user-space.

2005-01-19  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.9

2005-01-19  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/defconfig: Regenerate default configs.
	
	* arch/ppc/patches: Upgrade to Adeos 2.6.10rc3-ppc-r6c11.

	* include/nucleus/asm-*/system.h (xnarch_calibrate_timer): Guard
	against zero return.

	* drivers/16550A/16550A.h: Fix namespace clash with PPC's MSR
	flags.

	* drivers/16550A/16550A.c (rt_uart_open): Fix call to
	rt_registry_enter().

	* include/nucleus/asm-ppc/hal.h (__rthal_ullimd): Fix const
	attribute name.

	* GNUmakefile.am (SUBDIRS): Add missing drivers entry.

2005-01-18  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9-i386-r9c2.

	* skins/rtai/Kconfig: Do not make the registry support depend from
	from RTAI_OPT_FUSION.

2005-01-18  Max Krasnyansky <maxk@qualcomm.com>

	* testsuite/switch: Add test measuring how long it takes to switch
	between tasks and counting possibly missed switches.

2005-01-18  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Add misc section, initially populated with
	rt_misc_get_io_region() and rt_misc_put_io_region().

2005-01-17  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_do_timers): Remove superfluous test in
	the OPT_PERCPU_TIMER case (cpu == XNTIMER_KEEPER_ID).

2005-01-16  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c (__registry_proc_callback): Make sure to
	clear the directory pointer when removed from proc nodes.

2005-01-16  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>

	* testsuite/klatency/latency-module.c: Make the task period user-
	modifiable through a module parameter.
	
2005-01-16  Philippe Gerum  <rpm@xenomai.org>
